Revision history for Perl extension Catalyst::Model::DBIC::Schema

        - create=dynamic deprecation warning
        - conversion to Moose (of Model, helper to follow)
        - cursor caching support (via ::Role::Caching)
        - switch to hashref connect_info for DBIC 8100
        - better helper option parsing
        - pass loader opts to dynamic schemas

0.23  Sun Mar  8 20:30:02 GMT 2009
        - Kill a couple of warnings (one due to MRO::Compat)

0.22  Tue Mar  3 15:54:19 UTC 2009
        - Fix oddly formatted error message.
        - Doc patch to clarify generated classes
        - Switch to use_namespaces and InflateColumn::DateTime for create=static
          by default, with backcompat
        - Switch to MRO::Compat from NEXT
        - Add support for extra Schema::Loader options such as db_schema and
          components

0.21  Fri Aug 22 00:26:05 UTC 2008
        - doc fix (RT #31848)
        - connection_info can be just the DSN instead of an arrayref

0.20  Wed May 23, 2007
        - Fix for rt.cpan.org #22426
        - Switch to Module::Install
        - Assorted small pod and cleanliness fixes
        - Some requirements bumped to the latest maint
          releases of the same major feature release

0.18  Tue Aug  8 04:34:42 UTC 2006
        - Version bump for public release, no functional change

0.17_01 Thu Jul 27 01:06:13 UTC 2006
        - Updated for DBIC 0.07

0.16  Thu Jul  6 13:28:45 UTC 2006
        - Bugfix for create=static and connect_info coderef snippets
	- Be more verbose when connection_info is not set.

0.15  Tue Jun  6 01:33:57 UTC 2006
        - Fixed a serious bug in create=static usage
        - Re-arranged output generation so that the more likely
          failure to generate Schemas via create= will cause the
          helper to abort before generating the Model class itself

0.14  Mon Jun  5 23:34:35 UTC 2006
        - Helpers merged, helper syntax changed